k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nuxt-app
  labels:
    name: nuxt-app
