k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuxt-app-service
  namespace: nuxt-app
  labels:
    app: nuxt-app
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: nuxt-app
